# mirea-agent-portal

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  QUESTIONS_FOR_DANYA.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
agents/echo/: Dockerfile  README.md  agent.py  manifest.yaml  requirements.txt
agents/echo-ts/: Dockerfile  README.md  agent.js  manifest.yaml  package-lock.json  package.json
agents/proverka_stub/: Dockerfile  README.md  agent.py  manifest.yaml
agents/proverka_stub/tests/: test_proverka_manifest.py
agents/science_agent_stub/: Dockerfile  README.md  agent.py  manifest.yaml
agents/science_agent_stub/tests/: test_science_manifest.py
apps/portal-api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/portal-api/alembic/: env.py
apps/portal-api/alembic/versions/: 0001_init.py  0002_registry.py  0003_jobs.py  0004_llm_proxy.py  0005_admin_audit_log.py  0006_user_avatar.py  0007_agent_cost_cap.py  0008_user_notify_email.py  0009_cron_jobs.py  0010_invite_role.py
apps/portal-api/portal_api/: bootstrap.py  config.py  db.py  deps.py  main.py
apps/portal-api/portal_api/core/: __init__.py  exceptions.py  git_resolve.py  llm_auth.py  logging.py  origin.py  request_log.py  security.py  sentry.py  ws_auth.py
apps/portal-api/portal_api/models/: __init__.py  admin_audit_log.py  agent.py  agent_version.py  base.py  cron_job.py  invite.py  job.py  job_event.py  job_file.py  llm.py  refresh_token.py  tab.py  user.py
apps/portal-api/portal_api/routers/: admin_agent_versions.py  admin_agents.py  admin_audit.py  admin_cron_jobs.py  admin_invites.py  admin_jobs.py  admin_quota.py  admin_tabs.py  admin_users.py  auth.py  health.py  jobs.py  jobs_ws.py  llm_proxy.py  me.py  public_agents.py  public_catalog.py  public_tabs.py  sandbox.py
apps/portal-api/portal_api/schemas/: __init__.py  agent.py  agent_version.py  audit.py  auth.py  cron_job.py  error.py  invite.py  job.py  llm.py  tab.py  user.py
apps/portal-api/portal_api/services/: agent_service.py  agent_template.py  agent_upload.py  agent_version_service.py  audit_service.py  auth_service.py  build_enqueue.py  cron_schedule.py  ephemeral_token.py  file_store.py  invite_service.py  job_enqueue.py  job_event_service.py  job_service.py  llm_pricing.py  llm_proxy.py  llm_quota.py  login_rate_limit.py  tab_service.py  user_service.py
apps/portal-api/scripts/: start.sh
apps/portal-api/tests/: conftest.py  factories.py  test_admin_agent_versions.py  test_admin_agents.py  test_admin_audit.py  test_admin_invites.py  test_admin_jobs.py  test_admin_quota.py  test_admin_tabs.py  test_admin_usage.py  test_admin_users.py  test_auth_login.py  test_auth_logout.py  test_auth_refresh.py  test_auth_register.py  test_auth_register_creates_quota.py  test_bootstrap.py  test_bootstrap_tabs.py  test_build_enqueue.py  test_config.py  test_ephemeral_token.py  test_file_store.py  test_git_resolve.py  test_health.py  test_imports_sdk.py  test_job_create_with_llm.py  test_job_enqueue.py  test_job_service.py  test_jobs_cancel.py  test_jobs_create.py  test_jobs_events.py  test_jobs_list_detail.py  test_jobs_outputs.py  test_jobs_ws.py  test_llm_auth.py  test_llm_pricing.py  test_llm_proxy_chat.py  test_llm_proxy_models_endpoint.py  test_llm_proxy_not_implemented.py  test_llm_proxy_router.py  (+21 more)
apps/portal-api/tests/e2e/: conftest.py  test_e2e_llm_echo.py
apps/portal-api/tests/e2e/fixtures/echo-llm/: agent.py  manifest.yaml  requirements.txt
apps/portal-frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  components.json  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  prettier.config.mjs  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/portal-frontend/app/: forbidden.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
apps/portal-frontend/components/: CommandPalette.tsx  LogoutMenuItem.tsx  Ornament.tsx  empty-state.tsx  markdown.tsx  providers.tsx  topbar.tsx
apps/portal-frontend/lib/: design-tokens.ts  format.ts
apps/portal-worker/: .env.example  Dockerfile  README.md  pyproject.toml
apps/portal-worker/portal_worker/: config.py  db.py  main.py
apps/portal-worker/portal_worker/builder/: docker_build.py  dockerfile_gen.py  git_clone.py  manifest_loader.py
apps/portal-worker/portal_worker/core/: exceptions.py  logging.py  sentry.py
apps/portal-worker/portal_worker/runner/: __init__.py  docker_runner.py  jsonl_parser.py  llm_runtime_config.py  output_verifier.py
apps/portal-worker/portal_worker/services/: cron_scheduler.py  email.py
apps/portal-worker/portal_worker/tasks/: build_agent.py  run_job.py
apps/portal-worker/tests/: conftest.py  test_build_agent.py  test_docker_build.py  test_docker_runner.py  test_docker_runner_llm.py  test_dockerfile_gen.py  test_git_clone.py  test_jsonl_parser.py  test_main_listens_both_queues.py  test_manifest_loader.py  test_manifest_loader_llm.py  test_output_verifier.py  test_recover_orphaned.py  test_run_job_e2e.py  test_run_job_llm.py  test_run_job_unit.py
apps/portal-worker/tests/fixtures/: git_repo.py
docs/: admin-guide.md  agent-developer-guide.md  contract.md  deploy-guide.md  manifest.schema.json
docs/superpowers/mockups/: 01-architecture.html  02-tech-stack.html  03-manifest.html  04-runtime-io.html  05-home.html  06-job-page.html  07-admin.html
docs/superpowers/plans/: 2026-04-30-1.1-contract-sdk-echo.md  2026-04-30-1.2.1-skeleton.md  2026-05-01-1.2.2-registry.md  2026-05-01-1.2.3-jobs.md  2026-05-03-1.2.4-llm-proxy.md  2026-05-03-1.3-frontend.md  2026-05-10-1.4-agents-port.md
docs/superpowers/specs/: 2026-04-30-1.2.1-skeleton-design.md  2026-04-30-agent-platform-foundation-design.md  2026-05-01-1.2.2-registry-design.md  2026-05-01-1.2.3-jobs-design.md  (+3 more)
scripts/: backup-db.sh  restore-db.sh
(+116 files in other folders)
