[project]
name = "portal-api"
version = "0.1.0"
description = "Backend API портала AI-агентов МИРЭА"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.40",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<1.20",
    "bcrypt>=4.2,<5",
    "pyjwt>=2.9,<3",
    "structlog>=24.4,<25",
    "email-validator>=2.2,<3",
    "rq>=1.16,<2",
    "redis>=5.0,<6",
    "GitPython>=3.1.43,<4",
    "portal-sdk @ file:../../packages/portal-sdk-python",
    "aiofiles>=23,<25",
    "python-multipart>=0.0.9,<0.0.20",
    "feedparser>=6.0,<7",  # для /api/sandbox/arxiv — парсим Atom-feed arXiv
    "httpx>=0.28,<0.30",  # для /api/sandbox/arxiv (egress на arxiv.org)
    "sentry-sdk[fastapi,sqlalchemy]>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.30",
    "pytest-cov>=6.0,<7",
    "httpx>=0.28,<0.30",
    "testcontainers[postgres,redis]>=4.8,<5",
    "freezegun>=1.5,<2",
    "ruff>=0.7,<0.20",
    "mypy>=1.13,<2",
    "types-pyjwt>=1.7,<2",
    "types-aiofiles>=23,<25",
    "websockets>=13,<14",
    "respx>=0.21,<1",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["portal_api*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "-ra --strict-markers -m \"not openrouter_live\""
markers = [
    "openrouter_live: реальный hit OpenRouter API (запуск только через -m openrouter_live)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "RUF", "SIM", "RET", "N", "S"]
ignore = ["S101"]  # assert в тестах

[tool.ruff.lint.per-file-ignores]
# хардкод "паролей" и random в тестах OK; кириллица в docstring'ах не двусмысленна;
# subprocess вызовы git/etc в фикстурах — это контролируемая доверенная среда
"tests/**" = ["S105", "S106", "S107", "S311", "RUF002", "RUF003", "S603", "S607"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/"]

[[tool.mypy.overrides]]
module = ["testcontainers.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["redis.*", "rq.*", "git.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml", "yaml.*", "portal_sdk.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["portal_api"]
concurrency = ["greenlet", "thread"]
